# malanka

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml  python-package.yml
examples/: main.py  template.html
malanka/: __init__.py  channels.py  pubsub.py  sockets.py  streams.py  types.py  websockets.py
malanka/backends/: __init__.py  _base.py  postgres.py  redis.py
tests/: conftest.py  test_sockets.py
